Funzionante con tutti i vincoli (necessari test di conferma)

--- a/TRIP TEST - Adding Multiple Office.ipynb
+++ b/TRIP TEST - Adding Multiple Office.ipynb
@@ -405,6 +405,61 @@
     "                  name=\"ServingOnlyIfInTrip\"\n",
     "                 )\n",
     "\n",
+    "# # Agent can't do loop between two node\n",
+    "# _= mod.addConstrs((y[i,j,a]+y[j,i,a] <= 1\n",
+    "#                   for a in range(AGENTS)\n",
+    "#                   for i in starting_pos\n",
+    "#                   for j in starting_pos),\n",
+    "#                   name=\"NoTwoNodesLoops\")\n",
+    "\n",
+    "# _= mod.addConstrs((quicksum(y[i,j,a]+y[j,i,a]\n",
+    "#                             for i in pos if i != j\n",
+    "#                            ) <= 2*x[j,a] \n",
+    "#                   for a in range(AGENTS)\n",
+    "#                   for j in pos),\n",
+    "#                   name=\"GoOnlyToServed\")\n",
+    "\n",
+    "# _= mod.addConstrs((quicksum(y[i,j,a]+y[j,i,a]\n",
+    "#                             for i in pos if i != j\n",
+    "#                            ) >= x[j,a] \n",
+    "#                   for a in range(AGENTS)\n",
+    "#                   for j in pos),\n",
+    "#                   name=\"ServeOnce\")\n",
+    "\n",
+    "# _= mod.addConstrs((quicksum(y[i,j,a] \n",
+    "#                             for i in pos\n",
+    "#                             for j in pos\n",
+    "#                            ) == \n",
+    "#                    quicksum(x[i,a] for i in pos)-1\n",
+    "#                    for a in range(AGENTS)),\n",
+    "#                   name=\"EdgeCount\")\n",
+    "\n",
+    "# _= mod.addConstrs((quicksum([quicksum(y[i,h,a] for i in pos) * quicksum(y[h,j,a] for j in pos) \n",
+    "#                        for h in pos]) ==\n",
+    "#                    quicksum(x[i,a] for i in pos)-2\n",
+    "#                    for a in range(AGENTS)),\n",
+    "#                   name=\"EachClientHasOneBefore\")\n",
+    "\n",
+    "# _= mod.addConstrs((quicksum([(1-quicksum(y[i,h,a] for i in pos)) * quicksum(y[h,j,a] for j in pos) \n",
+    "#                        for h in pos]) == 1\n",
+    "#                    for a in range(AGENTS)),\n",
+    "#                   name=\"OneStart\")\n",
+    "\n",
+    "# _= mod.addConstrs((quicksum([quicksum(y[i,h,a] for i in pos) * (1-quicksum(y[h,j,a] for j in pos))\n",
+    "#                        for h in pos]) == 1\n",
+    "#                    for a in range(AGENTS)),\n",
+    "#                   name=\"OneEnd\")\n",
+    "\n",
+    "# se arco ij è isolato allora 1\n",
+    "# il numero di nodi isolati può essere al massimo 2\n",
+    "# _= mod.addConstrs(((1-quicksum(y[h,i,a] for h in pos)) +\n",
+    "#                    y[i,j,a] +\n",
+    "#                    (1-quicksum(y[j,k,a] for k in pos)) \n",
+    "                   \n",
+    "#                        for i in pos\n",
+    "#                        for j in pos\n",
+    "#                    for a in range(AGENTS)),\n",
+    "#                   name=\"SinglePath\")\n",
     "\n",
     "# Serving order for each Agent served Client is calculated as \n",
     "# (is actual Client served) + (serving order of Client before him)\n",
@@ -448,6 +503,12 @@
     "                            for a in range(AGENTS)),\n",
     "                  name=\"ServeOffice\")\n",
     "\n",
+    "# [OBSOLETE]\n",
+    "# # That position is Office position for only starting Office and must be unused\n",
+    "# _= mod.addConstrs((x[CLIENTS,a] == 0  \n",
+    "#                             for a in range(AGENTS)),\n",
+    "#                   name=\"NoOfficeFromOfficeA\")\n",
+    "\n",
     "# Agent can't go office from office\n",
     "_= mod.addConstrs((y[i,j,a] == 0  \n",
     "                            for i in office_pos\n",
@@ -471,7 +532,17 @@
     "_= mod.addConstrs((y[i,i+CLIENTS,a] >= x[i+CLIENTS,a]\n",
     "                            for i in client_pos\n",
     "                  for a in range(AGENTS)),\n",
-    "                  name=\"GoOfficeAfterItsClient\")"
+    "                  name=\"GoOfficeAfterItsClient\")\n",
+    "\n",
+    "# # The only Office that can be used as first position is the one in index 0\n",
+    "# # others are only destinations\n",
+    "# _= mod.addConstrs((quicksum(y[i,h,a]\n",
+    "#                             for i in pos) >= \n",
+    "#                    quicksum(y[h,j,a] \n",
+    "#                             for j in pos)\n",
+    "#                    for h in pos\n",
+    "#                   for a in range(AGENTS)),\n",
+    "#                   name=\"NotStartOnDestinationOffice\")"
    ]
   },
   {
@@ -551,7 +622,18 @@
     "                                             for i in reachable_pos\n",
     "                                             for j in reachable_pos)) >= LUNCH_BREAK_RANGE[0] - t[a]\n",
     "                   for a in range(AGENTS)),\n",
-    "                  name=\"AgentNeedLunchII\")"
+    "                  name=\"AgentNeedLunchII\")\n",
+    "\n",
+    "# \n",
+    "# _= mod.addConstrs((w[j,a] == quicksum(y[i,j,a]*\n",
+    "#                                       (data_dict[j]['READYTIME'] - \n",
+    "#                                        s[i,a] -\n",
+    "#                                        distance_matrix[i][j])\n",
+    "#                                       for i in pos\n",
+    "#                                      )\n",
+    "#                    for j in pos\n",
+    "#                    for a in range(AGENTS)),\n",
+    "#                   name=\"WaitForClient\")"
    ]
   },
   {
@@ -604,7 +686,7 @@
       "Variable types: 0 continuous, 10120 integer (3730 binary)\n",
       "Found heuristic solution: objective 19004.000000\n",
       "\n",
-      "Root relaxation: objective 1.462899e+03, 2444 iterations, 0.17 seconds\n",
+      "Root relaxation: objective 1.462899e+03, 2444 iterations, 0.18 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
@@ -621,7 +703,7 @@
       "     0     0 1920.14766    0  300 5627.00000 1920.14766  65.9%     -    4s\n",
       "H    0     0                    5353.0000000 1920.14766  64.1%     -    4s\n",
       "     0     0 1922.68502    0  285 5353.00000 1922.68502  64.1%     -    4s\n",
-      "     0     0 1922.82906    0  395 5353.00000 1922.82906  64.1%     -    5s\n",
+      "     0     0 1922.82906    0  395 5353.00000 1922.82906  64.1%     -    4s\n",
       "     0     0 1923.05546    0  445 5353.00000 1923.05546  64.1%     -    5s\n",
       "H    0     0                    3639.0000000 1923.05546  47.2%     -    5s\n",
       "     0     0 1923.37140    0  483 3639.00000 1923.37140  47.1%     -    5s\n",
@@ -640,17 +722,18 @@
       "     0     0 1924.65113    0  363 3639.00000 1924.65113  47.1%     -    9s\n",
       "     0     0 1925.10185    0  511 3639.00000 1925.10185  47.1%     -    9s\n",
       "     0     0 1925.10185    0  435 3639.00000 1925.10185  47.1%     -    9s\n",
-      "     0     2 1925.20839    0  428 3639.00000 1925.20839  47.1%     -   10s\n",
-      "   528   353 1927.06383   10  306 3639.00000 1925.29277  47.1%   119   15s\n",
+      "     0     2 1925.20839    0  428 3639.00000 1925.20839  47.1%     -    9s\n",
+      "     1     5 1925.20839    1  369 3639.00000 1925.20839  47.1%   677   10s\n",
+      "   521   322 1927.06209    9  304 3639.00000 1925.29277  47.1%   120   15s\n",
       "  2363  1140 1929.11320   11  334 3639.00000 1927.34784  47.0%  83.7   20s\n",
       "  2513  1147 1936.03853    9  655 3639.00000 1927.62557  47.0%  82.3   25s\n",
       "  2552  1173 2020.95253   19  579 3639.00000 1933.83272  46.9%  81.0   30s\n",
-      "  2604  1208 3000.11533   16  593 3639.00000 1946.86720  46.5%  79.4   35s\n",
-      "  2632  1226 1962.79575   13  550 3639.00000 1962.79575  46.1%  78.5   40s\n",
+      "  2603  1207 1946.77048    8  591 3639.00000 1946.77048  46.5%  79.4   35s\n",
+      "  2631  1226 1962.79575   10  542 3639.00000 1962.79575  46.1%  78.6   40s\n",
       "  2664  1249 2444.99487   15  729 3639.00000 1968.90682  45.9%  91.7   45s\n",
       "  2697  1271 2128.98536   17  551 3639.00000 1968.90682  45.9%  90.5   50s\n",
       "  2707  1283 1968.90682   28  542 3639.00000 1968.90682  45.9%  97.1   55s\n",
-      "  2836  1285 1979.31473   34  412 3639.00000 1968.90682  45.9%  99.5   60s\n",
+      "  2836  1285 1979.31473   34  412 3639.00000 1968.90682  45.9%  99.5   61s\n",
       "  3367  1220 3467.66082   45  215 3639.00000 1968.90682  45.9%  96.8   65s\n",
       "  4333  1011 3344.79743   44  256 3639.00000 1980.47212  45.6%  92.5   71s\n",
       "  5262   672     cutoff   42      3639.00000 2112.21513  42.0%  87.8   78s\n",
@@ -672,7 +755,7 @@
       "  Relax-and-lift: 56\n",
       "  BQP: 3\n",
       "\n",
-      "Explored 6670 nodes (569466 simplex iterations) in 84.80 seconds\n",
+      "Explored 6670 nodes (569466 simplex iterations) in 83.98 seconds\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
       "Solution count 6: 3639 5353 5627 ... 19004\n",
@@ -1092,78 +1175,6 @@
     "                print(\"------\")\n",
     "                print(s[i,a].X)\n",
     "                print(s[j,a].X)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "plot_model(agent_serve_customer, positions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define function to plot the graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_model(model, positions):\n",
-    "    \"\"\"This function is used to plot graph\"\"\"\n",
-    "    # Create figure\n",
-    "    plt.figure(figsize=(16,9))\n",
-    "    G = nx.Graph()\n",
-    "    # Add nodes to graph\n",
-    "    G.add_nodes_from(positions.keys())\n",
-    "    \n",
-    "    # Set labels dict\n",
-    "    node_labels = dict()\n",
-    "    # Set nodes positions\n",
-    "    for n, p in positions.items():\n",
-    "        G.nodes[n]['pos'] = p\n",
-    "        node_labels[n] = n\n",
-    "\n",
-    "    # Define edges colors\n",
-    "    edge_colors = [plt.cm.tab20.colors[i] for i in model.keys()]\n",
-    "    # Add edges\n",
-    "    for t, l in model.items():\n",
-    "        for i in range(1,len(l['trip'])):\n",
-    "            G.add_edge(l['trip'][i-1], l['trip'][i], \n",
-    "                       color=edge_colors[t], \n",
-    "                       alpha=0.5, \n",
-    "                       weight=4)\n",
-    "    # Set edges parameters \n",
-    "    edges = G.edges()\n",
-    "    colors = [G[u][v]['color'] for u,v in edges]\n",
-    "    weights = [G[u][v]['weight'] for u,v in edges]\n",
-    "    alphas = [G[u][v]['alpha'] for u,v in edges]\n",
-    "\n",
-    "    # Draw Nodes\n",
-    "    nx.draw_networkx_nodes(G, positions,\n",
-    "                           node_size=200,\n",
-    "                           node_color='c')\n",
-    "    # Draw Labels\n",
-    "    nx.draw_networkx_labels(G, positions, \n",
-    "                            node_labels, \n",
-    "                            font_size=10, \n",
-    "                            font_color='k')\n",
-    "    # Draw Edges \n",
-    "    nx.draw_networkx_edges(G, positions, \n",
-    "                           alpha=0.5, \n",
-    "                           width=weights, \n",
-    "                           edge_color=colors)\n",
-    "\n",
-    "    # Show graph\n",
-    "    plt.show()\n",
-    "\n",
-    "# Create model\n",
-    "mod = Model(\"TSPTW\")     "
    ]
   }
  ],
