--- a/ESAME_EURISTICO.ipynb
+++ b/ESAME_EURISTICO.ipynb
@@ -82,7 +82,7 @@
     "               'SERVICE': lambda x: float(x)\n",
     "              }\n",
     "# Agents count\n",
-    "AGENTS = 3\n",
+    "AGENTS = 10\n",
     "\n",
     "# Multiplier for distance cost\n",
     "TIME_PER_DISTANCE = 1\n",
@@ -255,12 +255,12 @@
     "def path_cost(path):\n",
     "    p = path.copy()\n",
     "    p.append(('end', WORKING_TIME_RANGE[1], -1)) #dummy at end\n",
-    "    work = 0\n",
+    "    cost = 0\n",
     "    for i in range(len(p)-1):\n",
-    "        working_time = p[i+1][1] - p[i][1]\n",
-    "        if not (p[i][0] == 'wait' or p[i][0] == 'travel'): #travel?\n",
-    "            work = work + working_time\n",
-    "    return work"
+    "        time_range = p[i+1][1] - p[i][1]\n",
+    "        if p[i][0] == 'wait' or p[i][0] == 'travel': #travel?\n",
+    "            cost = cost + time_range\n",
+    "    return cost"
    ]
   },
   {
@@ -713,58 +713,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: [[('wait', 0.0, -1), ('meet', 3700.0, 7), ('travel', 6100.0, -1), ('wait', 7120.0, -1), ('meet', 6100.0, 6), ('travel', 8500.0, -1), ('wait', 9460.0, -1), ('meet', 8500.0, 19), ('travel', 10900.0, -1), ('wait', 13060.0, -1), ('meet', 10900.0, 5), ('travel', 13300.0, -1), ('wait', 14260.0, -1), ('meet', 13300.0, 20), ('travel', 15700.0, -1), ('wait', 17080.0, -1), ('meet', 15800.0, 10), ('lunch', 18200.0, -1), ('travel', 20000.0, -1), ('wait', 23900.0, -1), ('meet', 20000.0, 15), ('travel', 22400.0, -1), ('wait', 22640.0, -1), ('meet', 22400.0, 4), ('travel', 24800.0, -1), ('wait', 25640.0, -1), ('meet', 24800.0, 1), ('wait', 27200.0, -1)]], 1: [[('wait', 0.0, -1), ('meet', 3600.0, 8), ('travel', 6000.0, -1), ('wait', 6480.0, -1), ('meet', 6000.0, 11), ('travel', 8400.0, -1), ('wait', 10020.0, -1), ('meet', 8400.0, 2), ('travel', 10800.0, -1), ('office', 12480.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 2: [[('wait', 0.0, -1), ('meet', 0.0, 14), ('travel', 2400.0, -1), ('wait', 4380.0, -1), ('meet', 2400.0, 13), ('travel', 4800.0, -1), ('wait', 5940.0, -1), ('meet', 4800.0, 12), ('travel', 7200.0, -1), ('wait', 10080.0, -1), ('meet', 7200.0, 17), ('travel', 9600.0, -1), ('wait', 11160.0, -1), ('meet', 9700.0, 3), ('travel', 12100.0, -1), ('wait', 12640.0, -1), ('meet', 12100.0, 9), ('travel', 14500.0, -1), ('wait', 15340.0, -1), ('meet', 14500.0, 18), ('lunch', 16900.0, -1), ('travel', 18700.0, -1), ('wait', 21580.0, -1), ('meet', 18700.0, 16), ('travel', 21100.0, -1), ('office', 24400.0, 0)]]}\n",
-      "Initial cost: 72320.0\n",
+      "{0: [[('wait', 0.0, -1), ('meet', 0, 0), ('travel', 3600.0, -1), ('wait', 5280.0, -1), ('meet', 8400.0, 2), ('travel', 10800.0, -1), ('lunch', 13320.0, -1), ('wait', 15120.0, -1), ('meet', 18700.0, 16), ('travel', 21100.0, -1), ('wait', 23260.0, -1), ('meet', 24800.0, 1), ('wait', 27200.0, -1)]], 1: [[('wait', 0.0, -1), ('meet', 0.0, 14), ('travel', 2400.0, -1), ('wait', 4020.0, -1), ('meet', 4800.0, 12), ('travel', 7200.0, -1), ('wait', 11580.0, -1), ('meet', 12100.0, 9), ('lunch', 14500.0, -1), ('travel', 16300.0, -1), ('wait', 18520.0, -1), ('meet', 20000.0, 15), ('wait', 22400.0, -1)]], 2: [[('wait', 0.0, -1), ('meet', 0, 21), ('travel', 0.0, -1), ('wait', 0.0, -1), ('meet', 2400.0, 13), ('travel', 4800.0, -1), ('wait', 8040.0, -1), ('meet', 8500.0, 19), ('travel', 10900.0, -1), ('wait', 12700.0, -1), ('meet', 13300.0, 20), ('lunch', 15700.0, -1), ('travel', 17500.0, -1), ('wait', 21640.0, -1), ('meet', 22400.0, 4), ('wait', 24800.0, -1)]], 3: [[('wait', 0.0, -1), ('meet', 3600.0, 8), ('travel', 6000.0, -1), ('wait', 9360.0, -1), ('meet', 9700.0, 3), ('travel', 12100.0, -1), ('wait', 12520.0, -1), ('meet', 14500.0, 18), ('lunch', 16900.0, -1), ('travel', 18700.0, -1), ('office', 24580.0, 0)]], 4: [[('wait', 0.0, -1), ('meet', 3700.0, 7), ('travel', 6100.0, -1), ('wait', 8380.0, -1), ('meet', 10900.0, 5), ('travel', 13300.0, -1), ('wait', 15520.0, -1), ('meet', 15800.0, 10), ('lunch', 18200.0, -1), ('wait', 20000.0, -1)]], 5: [[('wait', 0.0, -1), ('meet', 6000.0, 11), ('travel', 8400.0, -1), ('office', 11100.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 6: [[('wait', 0.0, -1), ('meet', 6100.0, 6), ('travel', 8500.0, -1), ('office', 13780.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 7: [[('wait', 0.0, -1), ('meet', 7200.0, 17), ('travel', 9600.0, -1), ('office', 14400.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 8: [[('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 9: [[('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]]}\n",
+      "Initial cost: 118460.0\n",
+      "Using license file C:\\Users\\gabriele\\gurobi.lic\n",
+      "Academic license - for non-commercial use only\n",
       "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
-      "Optimize a model with 25 rows, 3 columns and 23 nonzeros\n",
-      "Model fingerprint: 0x340e71b2\n",
-      "Variable types: 0 continuous, 3 integer (3 binary)\n",
+      "Optimize a model with 32 rows, 105 columns and 306 nonzeros\n",
+      "Model fingerprint: 0xce3eda26\n",
+      "Variable types: 0 continuous, 105 integer (105 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
-      "  Objective range  [2e+04, 3e+04]\n",
+      "  Objective range  [2e+03, 2e+04]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
+      "Found heuristic solution: objective 115160.00000\n",
+      "Presolve removed 24 rows and 89 columns\n",
       "Presolve time: 0.00s\n",
+      "Presolved: 8 rows, 16 columns, 32 nonzeros\n",
+      "Variable types: 0 continuous, 16 integer (16 binary)\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds\n",
-      "Thread count was 1 (of 8 available processors)\n",
+      "Root relaxation: objective 1.140600e+05, 9 iterations, 0.00 seconds\n",
       "\n",
-      "Solution count 0\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "Model is infeasible\n",
-      "Best objective -, best bound -, gap -\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "Unable to retrieve attribute 'x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-4614d64384b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m     \u001b[0mscheds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mschedules_from_mod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m#also updates agents_paths for next iteration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[0mcost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-11-eb02137672a8>\u001b[0m in \u001b[0;36mschedules_from_mod\u001b[1;34m(mod)\u001b[0m\n\u001b[0;32m     52\u001b[0m     \u001b[0ml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetVars\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     55\u001b[0m             \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvarName\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m             \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mvar.pxi\u001b[0m in \u001b[0;36mgurobipy.Var.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mvar.pxi\u001b[0m in \u001b[0;36mgurobipy.Var.getAttr\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mattrutil.pxi\u001b[0m in \u001b[0;36mgurobipy.__getattr\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: Unable to retrieve attribute 'x'"
+      "*    0     0               0    114060.00000 114060.000  0.00%     -    0s\n",
+      "\n",
+      "Explored 0 nodes (9 simplex iterations) in 0.02 seconds\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 2: 114060 115160 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 1.140600000000e+05, best bound 1.140600000000e+05, gap 0.0000%\n",
+      "118460.0 114060.0\n",
+      "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
+      "Optimize a model with 32 rows, 105 columns and 306 nonzeros\n",
+      "Model fingerprint: 0x7d05bb35\n",
+      "Variable types: 0 continuous, 105 integer (105 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [2e+03, 2e+04]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 1e+00]\n",
+      "Found heuristic solution: objective 115160.00000\n",
+      "Presolve removed 24 rows and 89 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 8 rows, 16 columns, 32 nonzeros\n",
+      "Variable types: 0 continuous, 16 integer (16 binary)\n",
+      "\n",
+      "Root relaxation: objective 1.140600e+05, 8 iterations, 0.00 seconds\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "*    0     0               0    114060.00000 114060.000  0.00%     -    0s\n",
+      "\n",
+      "Explored 0 nodes (8 simplex iterations) in 0.02 seconds\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 2: 114060 115160 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 1.140600000000e+05, best bound 1.140600000000e+05, gap 0.0000%\n",
+      "114060.0 114060.0\n"
      ]
     }
    ],
    "source": [
     "#initial cost\n",
     "last_cost = 0\n",
-    "#scheds = paths_to_schedule()\n",
-    "nodes = {0:[7,6,19,5,20,10,15,4,1], 1:[8,11,2], 2:[14,13,12,17,3,9,18,16]}\n",
-    "agents_paths = nodes\n",
     "scheds = paths_to_schedule()\n",
+    "#nodes = {0:[7,6,19,5,20,10,15,4,1], 1:[8,11,2], 2:[14,13,12,17,3,9,18,16]}\n",
+    "#agents_paths = nodes\n",
+    "#scheds = paths_to_schedule()\n",
     "print(scheds)\n",
     "\n",
     "for key in scheds.keys():\n",
@@ -791,9 +820,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [('wait', 0.0, -1), ('meet', 0, 0), ('travel', 3600.0, -1), ('wait', 5280.0, -1), ('meet', 8400.0, 2), ('travel', 10800.0, -1), ('lunch', 12360.0, -1), ('wait', 14160.0, -1), ('meet', 20000.0, 15), ('travel', 22400.0, -1), ('wait', 23120.0, -1), ('meet', 24800.0, 1), ('wait', 27200.0, -1)], 1: [('wait', 0.0, -1), ('meet', 0.0, 14), ('travel', 2400.0, -1), ('wait', 4020.0, -1), ('meet', 4800.0, 12), ('travel', 7200.0, -1), ('wait', 11580.0, -1), ('meet', 12100.0, 9), ('lunch', 14500.0, -1), ('travel', 16300.0, -1), ('wait', 18280.0, -1), ('meet', 18700.0, 16), ('travel', 21100.0, -1), ('office', 24400.0, 0)], 2: [('wait', 0.0, -1), ('meet', 0, 21), ('travel', 0.0, -1), ('wait', 0.0, -1), ('meet', 3700.0, 7), ('travel', 6100.0, -1), ('wait', 6340.0, -1), ('meet', 8500.0, 19), ('travel', 10900.0, -1), ('wait', 12700.0, -1), ('meet', 13300.0, 20), ('lunch', 15700.0, -1), ('travel', 17500.0, -1), ('wait', 21640.0, -1), ('meet', 22400.0, 4), ('wait', 24800.0, -1)], 3: [('wait', 0.0, -1), ('meet', 3600.0, 8), ('travel', 6000.0, -1), ('wait', 9360.0, -1), ('meet', 9700.0, 3), ('travel', 12100.0, -1), ('wait', 12520.0, -1), ('meet', 14500.0, 18), ('lunch', 16900.0, -1), ('travel', 18700.0, -1), ('office', 24580.0, 0)], 4: [('wait', 0.0, -1), ('meet', 2400.0, 13), ('travel', 4800.0, -1), ('wait', 10200.0, -1), ('meet', 10900.0, 5), ('travel', 13300.0, -1), ('wait', 15520.0, -1), ('meet', 15800.0, 10), ('lunch', 18200.0, -1), ('wait', 20000.0, -1)], 5: [('wait', 0.0, -1), ('meet', 6000.0, 11), ('travel', 8400.0, -1), ('office', 11100.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 6: [('wait', 0.0, -1), ('meet', 7200.0, 17), ('travel', 9600.0, -1), ('office', 14400.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 7: [('wait', 0.0, -1), ('meet', 6100.0, 6), ('travel', 8500.0, -1), ('office', 13780.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 8: [('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 9: [('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(scheds)"
    ]
