--- a/ESAME_EURISTICO.ipynb
+++ b/ESAME_EURISTICO.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,11 +418,11 @@
     "         ('travel', 21100.0, -1), ('office', 24400.0, 0)]\n",
     "    '''\n",
     "    '''\n",
-    "    sched = [('wait', 0.0, -1), ('meet', 2400.0, 13), ('travel', 4800.0, -1), ('wait', 10200.0, -1), \n",
+    "    sched = [('wait', 0.0, -1), ('meet', 9000.0, 13), ('travel', 10000.0, -1), ('wait', 10200.0, -1), \n",
     "     ('meet', 10900.0, 5), ('travel', 13300.0, -1), ('wait', 15520.0, -1), ('meet', 15800.0, 10), \n",
     "     ('lunch', 18200.0, -1), ('wait', 20000.0, -1)]\n",
+    "     '''\n",
     "    \n",
-    "    '''\n",
     "    '''\n",
     "    sched = [('office', 0.0, -1), ('travel', 1000.0, 14), ('wait', 2400.0, -1), \n",
     "         ('meet', 2800.0, 1), ('travel', 3100.0), ('office', 6060.0, -1), ('travel', 9600.0, -1), \n",
@@ -431,7 +431,11 @@
     "         ('travel', 21100.0, -1), ('office', 24400.0, 0)]\n",
     "    '''\n",
     "    \n",
-    "    sched.append(('end', WORKING_TIME_RANGE[1], -1)) # utile nel caso la schedula finisca con wait\n",
+    "    sched = [('wait', 0.0, -1), ('meet', 4120.0, 0), ('travel', 7720.0, -1), ('wait', 9400.0, -1), \n",
+    "              ('meet', 9400.0, 2), ('travel', 11800.0, -1), ('lunch', 13360.0, -1), ('wait', 15160.0, -1), ('meet', 21000.0, 15), \n",
+    "              ('travel', 23400.0, -1), ('wait', 24120.0, -1), ('meet', 25800.0, 1), ('wait', 28200.0, -1), ('end', 28800, -1)]\n",
+    "    \n",
+    "    sched.append(('end', WORKING_TIME_RANGE[1], -1)) #utile nel caso la schedula finisca con wait\n",
     "    waits = [w for w in sched if w[0] == 'wait']\n",
     "    waits.reverse()\n",
     "    #print(waits)\n",
@@ -442,7 +446,7 @@
     "        if s[0] == 'office':\n",
     "            indexes.append(i)\n",
     "\n",
-    "    if len(indexes) in [0,1] and not sched[-2][0] == 'wait': #considero anche il caso in cui si finisca con un wait fino a fine \n",
+    "    if len(indexes) in [0,1] and not sched[-2][0] == 'wait' and not sched[0][0] == 'wait': #considero anche il caso in cui si finisca con un wait fino a fine\n",
     "        return\n",
     "    \n",
     "    slices = []\n",
@@ -454,14 +458,14 @@
     "    elif 'wait' in [w[0] for w in sched[0:len(sched)]]:\n",
     "        slices.append(sched)\n",
     "\n",
-    "    print(slices)\n",
-    "    print('-----------')\n",
+    "    #print(slices)\n",
+    "    #print('-----------')\n",
     "    #optimize office-office slice + last slice if it contains 'wait' #TODO\n",
     "    for s in slices:\n",
     "        waits = [w for w in s if w[0] == 'wait']\n",
     "        waits.reverse()\n",
     "        for w in waits:# i wait sono in ordine decrescente ora (reverse())\n",
-    "            #print('Searcing wait: ' + str(w))\n",
+    "             #print('Searcing wait: ' + str(w))\n",
     "            for i, work in enumerate(s):\n",
     "                if w == work:\n",
     "                    #cerco l'indice del meet precedente a questo wait\n",
@@ -475,7 +479,7 @@
     "                    \n",
     "                    _min = 0\n",
     "                    if s[j][0] == 'meet':\n",
-    "                        print(s[j], i, j)\n",
+    "                        #print(s[j], i, j)\n",
     "                        wait_time = s[i+1][1] - s[i][1]\n",
     "                        meet_time = data_dict[s[j][2]]['DUEDATE'] - data_dict[s[j][2]]['READYTIME']\n",
     "                        if 'lunch' in [w[0] for w in s[j:i+1]]:#c'è il pranzo in mezzo\n",
@@ -499,43 +503,40 @@
     "                            wait_time = s[i+1][1] - s[i][1]\n",
     "                            _min = wait_time\n",
     "                        j = j+1 #il primo è office quindi non c'è lo spostamento come nei meet ma allungo il tempo, parto da travel (o lunch)\n",
-    "                    #valutare caso wait in fondo con lunch o no in mezzo e ottimizzare meet prima ????\n",
     "                    for k in range(j,i+1):\n",
     "                        newval = list(s[k])\n",
     "                        newval[1] = newval[1] + _min\n",
     "                        s[k] = tuple(newval)\n",
-    "                    print('optimized slice: ', s[j:i+2])\n",
-    "                    print('all_the_slice', s)\n",
+    "                    #print('optimized slice: ', s[j:i+2])\n",
+    "                    #print('all_the_slice', s)\n",
     "                    break\n",
     "                    \n",
     "    #ricompongo la schedula\n",
     "    newsched = []\n",
     "    for s in slices:\n",
     "        newsched = newsched + s[0:len(s)-1]\n",
-    "    print('newsched', newsched)\n",
     "    sched = newsched\n",
-    "    #TODO se la schedula ottimizzata inizia con wait verifico che ci sia il tempo per l'ufficio"
+    "    \n",
+    "    #se la schedula ottimizzata inizia con wait verifico che ci sia il tempo per l'ufficio\n",
+    "    if sched[0][0] == 'wait':\n",
+    "        diff = sched[1][1] - sched[0][1]\n",
+    "        if diff >= OFFICE_SERVICE + distance_matrix[0][sched[1][2]]*MINUTES:\n",
+    "            start_travel = sched[1][1] - distance_matrix[0][sched[1][2]]*MINUTES\n",
+    "            #print('values ' , sched[1], sched[0], diff, distance_matrix[0][sched[1][2]]*MINUTES, start_travel)\n",
+    "            sched.pop(0)\n",
+    "            sched.insert(0, ('travel', start_travel, -1))\n",
+    "            sched.insert(0, ('office', 0.0, 0))       \n",
+    "            \n",
+    "    #print('sched ', sched)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "optimize_time_windows() missing 1 required positional argument: 'sched'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-147-a2f789e34598>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0moptimize_time_windows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: optimize_time_windows() missing 1 required positional argument: 'sched'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#optimize_time_windows()"
+    "#optimize_time_windows([])"
    ]
   },
   {
@@ -787,11 +788,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{0: [[('wait', 0.0, -1), ('meet', 0, 0), ('travel', 3600.0, -1), ('wait', 5280.0, -1), ('meet', 8400.0, 2), ('travel', 10800.0, -1), ('lunch', 13320.0, -1), ('wait', 15120.0, -1), ('meet', 18700.0, 16), ('travel', 21100.0, -1), ('wait', 23260.0, -1), ('meet', 24800.0, 1), ('wait', 27200.0, -1)]], 1: [[('wait', 0.0, -1), ('meet', 0.0, 14), ('travel', 2400.0, -1), ('wait', 4020.0, -1), ('meet', 4800.0, 12), ('travel', 7200.0, -1), ('wait', 11580.0, -1), ('meet', 12100.0, 9), ('lunch', 14500.0, -1), ('travel', 16300.0, -1), ('wait', 18520.0, -1), ('meet', 20000.0, 15), ('wait', 22400.0, -1)]], 2: [[('wait', 0.0, -1), ('meet', 0, 21), ('travel', 0.0, -1), ('wait', 0.0, -1), ('meet', 2400.0, 13), ('travel', 4800.0, -1), ('wait', 8040.0, -1), ('meet', 8500.0, 19), ('travel', 10900.0, -1), ('wait', 12700.0, -1), ('meet', 13300.0, 20), ('lunch', 15700.0, -1), ('travel', 17500.0, -1), ('wait', 21640.0, -1), ('meet', 22400.0, 4), ('wait', 24800.0, -1)]], 3: [[('wait', 0.0, -1), ('meet', 3600.0, 8), ('travel', 6000.0, -1), ('wait', 9360.0, -1), ('meet', 9700.0, 3), ('travel', 12100.0, -1), ('wait', 12520.0, -1), ('meet', 14500.0, 18), ('lunch', 16900.0, -1), ('travel', 18700.0, -1), ('office', 24580.0, 0)]], 4: [[('wait', 0.0, -1), ('meet', 3700.0, 7), ('travel', 6100.0, -1), ('wait', 8380.0, -1), ('meet', 10900.0, 5), ('travel', 13300.0, -1), ('wait', 15520.0, -1), ('meet', 15800.0, 10), ('lunch', 18200.0, -1), ('wait', 20000.0, -1)]], 5: [[('wait', 0.0, -1), ('meet', 6000.0, 11), ('travel', 8400.0, -1), ('office', 11100.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 6: [[('wait', 0.0, -1), ('meet', 6100.0, 6), ('travel', 8500.0, -1), ('office', 13780.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 7: [[('wait', 0.0, -1), ('meet', 7200.0, 17), ('travel', 9600.0, -1), ('office', 14400.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 8: [[('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]], 9: [[('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]]}\n",
       "{0: [0, 2, 16, 1], 1: [14, 12, 9, 15], 2: [21, 13, 19, 20, 4], 3: [8, 3, 18], 4: [7, 5, 10], 5: [11], 6: [6], 7: [17], 8: [], 9: []}\n",
       "Initial cost: 118460.0\n",
       "\n",
       "--------------------------------------------\n",
-      "Warning: your license will expire in 5 days\n",
+      "Warning: your license will expire in 2 days\n",
       "--------------------------------------------\n",
       "\n",
       "Using license file C:\\Users\\gabriele\\gurobi.lic\n",
@@ -806,18 +808,18 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 7 rows and 56 columns\n",
-      "Presolve time: 0.07s\n",
+      "Presolve time: 0.01s\n",
       "Presolved: 25 rows, 91 columns, 251 nonzeros\n",
       "Variable types: 0 continuous, 91 integer (91 binary)\n",
       "\n",
-      "Root relaxation: objective 1.140600e+05, 37 iterations, 0.02 seconds\n",
+      "Root relaxation: objective 1.140600e+05, 37 iterations, 0.00 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
       "*    0     0               0    114060.00000 114060.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (37 simplex iterations) in 0.30 seconds\n",
+      "Explored 0 nodes (37 simplex iterations) in 0.03 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 114060 \n",
@@ -837,7 +839,7 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 7 rows and 56 columns\n",
-      "Presolve time: 0.08s\n",
+      "Presolve time: 0.00s\n",
       "Presolved: 25 rows, 91 columns, 251 nonzeros\n",
       "Variable types: 0 continuous, 91 integer (91 binary)\n",
       "\n",
@@ -848,7 +850,7 @@
       "\n",
       "*    0     0               0    110760.00000 110760.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (33 simplex iterations) in 0.28 seconds\n",
+      "Explored 0 nodes (33 simplex iterations) in 0.02 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 110760 \n",
@@ -857,7 +859,13 @@
       "Best objective 1.107600000000e+05, best bound 1.107600000000e+05, gap 0.0000%\n",
       "{0: [('wait', 0.0, -1), ('meet', 3600.0, 8), ('travel', 6000.0, -1), ('wait', 7260.0, -1), ('meet', 8400.0, 2), ('travel', 10800.0, -1), ('lunch', 12360.0, -1), ('wait', 14160.0, -1), ('meet', 20000.0, 15), ('travel', 22400.0, -1), ('wait', 23120.0, -1), ('meet', 24800.0, 1), ('wait', 27200.0, -1)], 1: [('wait', 0.0, -1), ('meet', 0.0, 14), ('travel', 2400.0, -1), ('wait', 6060.0, -1), ('meet', 7200.0, 17), ('travel', 9600.0, -1), ('wait', 11280.0, -1), ('meet', 12100.0, 9), ('lunch', 14500.0, -1), ('travel', 16300.0, -1), ('wait', 18280.0, -1), ('meet', 18700.0, 16), ('travel', 21100.0, -1), ('office', 24400.0, 0)], 2: [('wait', 0.0, -1), ('meet', 0, 21), ('travel', 0.0, -1), ('wait', 0.0, -1), ('meet', 3700.0, 7), ('travel', 6100.0, -1), ('wait', 6340.0, -1), ('meet', 8500.0, 19), ('travel', 10900.0, -1), ('wait', 12700.0, -1), ('meet', 13300.0, 20), ('lunch', 15700.0, -1), ('travel', 17500.0, -1), ('wait', 21640.0, -1), ('meet', 22400.0, 4), ('wait', 24800.0, -1)], 3: [('wait', 0.0, -1), ('meet', 0, 0), ('travel', 3600.0, -1), ('wait', 9120.0, -1), ('meet', 9700.0, 3), ('travel', 12100.0, -1), ('wait', 12520.0, -1), ('meet', 14500.0, 18), ('lunch', 16900.0, -1), ('travel', 18700.0, -1), ('office', 24580.0, 0)], 4: [('wait', 0.0, -1), ('meet', 2400.0, 13), ('travel', 4800.0, -1), ('wait', 10200.0, -1), ('meet', 10900.0, 5), ('travel', 13300.0, -1), ('wait', 15520.0, -1), ('meet', 15800.0, 10), ('lunch', 18200.0, -1), ('wait', 20000.0, -1)], 5: [('wait', 0.0, -1), ('meet', 6100.0, 6), ('travel', 8500.0, -1), ('office', 13780.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 6: [('wait', 0.0, -1), ('meet', 6000.0, 11), ('travel', 8400.0, -1), ('office', 11100.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 7: [('wait', 0.0, -1), ('meet', 4800.0, 12), ('travel', 7200.0, -1), ('office', 11100.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 8: [('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)], 9: [('office', 0.0, 0), ('lunch', 14400, -1), ('office', 16200, 0)]}\n",
       "{0: [8, 2, 15, 1], 1: [14, 17, 9, 16], 2: [21, 7, 19, 20, 4], 3: [0, 3, 18], 4: [13, 5, 10], 5: [6], 6: [11], 7: [12], 8: [], 9: []}\n",
-      "114060.0 110760.0\n",
+      "114060.0 110760.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
       "Optimize a model with 32 rows, 146 columns and 436 nonzeros\n",
       "Model fingerprint: 0x73ec5f78\n",
@@ -868,7 +876,7 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 7 rows and 54 columns\n",
-      "Presolve time: 0.02s\n",
+      "Presolve time: 0.00s\n",
       "Presolved: 25 rows, 92 columns, 254 nonzeros\n",
       "Variable types: 0 continuous, 92 integer (92 binary)\n",
       "\n",
@@ -879,7 +887,7 @@
       "\n",
       "*    0     0               0    110760.00000 110760.000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (31 simplex iterations) in 0.13 seconds\n",
+      "Explored 0 nodes (31 simplex iterations) in 0.01 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 110760 \n",
@@ -899,8 +907,12 @@
     "#nodes = {0:[7,6,19,5,20,10,15,4,1], 1:[8,11,2], 2:[14,13,12,17,3,9,18,16]}\n",
     "#agents_paths = nodes\n",
     "#scheds = paths_to_schedule()\n",
-    "#print(scheds)\n",
+    "print(scheds)\n",
     "\n",
+    "for key in scheds.keys():\n",
+    "    for s in scheds[key]:\n",
+    "        optimize_time_windows(s)\n",
+    "    \n",
     "print(agents_paths)\n",
     "for key in scheds.keys():\n",
     "    last_cost = last_cost + path_cost(scheds[key][0])\n",
@@ -908,6 +920,9 @@
     "\n",
     "while (True):\n",
     "    scheds = all_schedule_comb(agents_paths)\n",
+    "    for key in scheds.keys():\n",
+    "        for s in scheds[key]:\n",
+    "            optimize_time_windows(s)\n",
     "    mod = pmp(scheds)\n",
     "    mod.optimize()\n",
     "    \n",
@@ -952,6 +967,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3600\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(OFFICE_SERVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2700\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(distance_matrix[0][11]*MINUTES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "14400 19800.0\n"
      ]
     }
@@ -962,7 +1011,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5840.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "21000.0 - 15160.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1013,24 +1082,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "116\n"
+      "51\n"
      ]
     }
    ],
    "source": [
-    "print(distance_matrix[0][10])"
+    "print(distance_matrix[15][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1108,7 @@
        "6960"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,27 +1119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1800"
+       "8340"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "30*60"
+    "(28+51)*60 +3600"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
