--- a/ESAME_EURISTICO.ipynb
+++ b/ESAME_EURISTICO.ipynb
@@ -226,18 +226,20 @@
     "\n",
     "# POSITIONS SETS FOR CLEANER MODEL\n",
     "agent_list = list(range(AGENTS))\n",
-    "all_pos = list(range(CLIENTS*2))\n",
-    "start_pos = CLIENTS\n",
-    "client_pos = list(range(1,CLIENTS))\n",
-    "only_start_office_pos = 0\n",
-    "no_duplicates_pos = list(range(0,CLIENTS))\n",
-    "destination_office_pos = list(range(CLIENTS+1, CLIENTS*2))\n",
-    "office_pos = [only_start_office_pos]+destination_office_pos\n",
-    "reachable_pos = [p for p in range(CLIENTS*2) if p not in [start_pos,]]\n",
-    "\n",
     "#--------------\n",
     "clients_list = list(range(CLIENTS))\n",
     "meets_duedates = [(i, data_dict[i]['READYTIME']) for i in data_dict.keys()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definiamo una funzione che dato un percorso, definito come lista, ne restituisce il costo.\n",
+    "Un percorso è una successione di azioni tra {'office','meet','wait','travel', 'lunch'} ai quali\n",
+    "sono associati un tempo di inizio e una posizione.\n",
+    "\n",
+    "Il costo del percorso è calcolato dai tempi di wait e di travel, che si punta a minimizzare."
    ]
   },
   {
@@ -263,7 +265,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Primal master problem"
+    "# Primal master problem\n",
+    "\n",
+    "Definiamo il problema master: dato un sottoinsieme di schedule ammissibili (cioè che contengono un\n",
+    "pranzo e per cui la successione dei tempi è in sequenza), vengono scelte solo alcune di queste\n",
+    "rispettando i seguenti vincoli:\n",
+    "1. ogni agente ha una sola schedula assegnata\n",
+    "2. ogni meet è presente in una sola schedula tra quelle selezionate\n",
+    "\n",
+    "Ad ogni schedula è assegnata una variabile binaria x nell'insieme {0,1}"
    ]
   },
   {
@@ -311,7 +321,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Partendo da una schedula per ogni agente, genera tutte le schedule che si ottengono scambiando due nodi tra loro'''\n",
+    "'''\n",
+    "Partendo da una schedula per ogni agente, genera tutte le schedule che si ottengono scambiando due meet tra loro.\n",
+    "Lo swap dei meet avviene su tutte le liste di ogni agente, e per variare la dimensione delle liste (avendo così\n",
+    "più schedule disponibili) viene generata anche una variante di lista (per ogni agente) con un meet in meno e un meet\n",
+    "in più nel percorso.\n",
+    "'''\n",
     "def swap(agents_paths):\n",
     "    lens = { i : len(agents_paths[i]) for i in range(len(agents_paths))}\n",
     "    #init lens_reduced\n",
@@ -367,17 +382,7 @@
     "                counter = 0\n",
     "    return all_paths\n",
     "\n",
-    "def all_schedule_comb(agents_paths):\n",
-    "    scheds = paths_to_schedule()\n",
-    "    all_combinations = swap(agents_paths)\n",
-    "    for comb in all_combinations: #all_combination is a list of dicts\n",
-    "        for key in comb.keys():\n",
-    "            sched = path_to_schedule(comb[key])\n",
-    "            if is_sched_feasible(sched) and sched not in scheds[key]:\n",
-    "                scheds[key].append(sched) \n",
-    "    return scheds\n",
-    "\n",
-    "'''Ritorna una schedula per ogni agente sotto forma di dict'''\n",
+    "'''Ritorna una schedula per ogni agente sotto forma di dict, prendendole dal modello'''\n",
     "def schedules_from_mod(mod):\n",
     "    l = []\n",
     "    for v in mod.getVars():\n",
@@ -472,56 +477,8 @@
     "            newsched.insert(0, ('travel', start_travel, -1))\n",
     "            newsched.insert(0, ('office', 0.0, 0))\n",
     "            \n",
-    "    sched = newsched"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Per ogni agente cerco il percorso migliore per seguire più meeting possibili, considero anche il pranzo\n",
-    "'''\n",
-    "#TODO: 0 E 20 vanno tolti dal dict perchè indicano l'ufficio e non un meet\n",
-    "#init\n",
-    "agents_paths = {a:[] for a in agent_list} #-1?\n",
-    "uncovered_meets = meets_duedates.copy()\n",
-    "uncovered_meets.sort(key=lambda x: x[1])\n",
-    "for i in range(len(agents_paths)):\n",
-    "    lunch_done = False\n",
-    "    if uncovered_meets:\n",
-    "        next_meet = uncovered_meets.pop(0)\n",
-    "        freeat = next_meet[1] + data_dict[next_meet[0]]['SERVICE']\n",
-    "        if next_meet[1] <= LUNCH_BREAK_RANGE[0] and freeat >= LUNCH_BREAK_RANGE[1]:\n",
-    "            raise Exception(\"Inizializzazione fallita: un meet occupa tutta la durata di un pranzo.\")\n",
-    "            \n",
-    "        agents_paths[i].append(next_meet[0])\n",
-    "        if next_meet[1] >= LUNCH_BREAK_RANGE[0] + LUNCH_BREAK_TIME and next_meet[1] <= LUNCH_BREAK_RANGE[1] + LUNCH_BREAK_TIME: #ho già pranzato\n",
-    "            lunch_done = True\n",
-    "        elif freeat >= LUNCH_BREAK_RANGE[0] and freeat <= LUNCH_BREAK_RANGE[1]: #è ora di pranzo: sposto freeat di mezz'ora\n",
-    "            freeat = freeat + LUNCH_BREAK_TIME\n",
-    "            lunch_done = True\n",
-    "        \n",
-    "        to_remove = []\n",
-    "        for m in uncovered_meets:\n",
-    "            if m[1] <= LUNCH_BREAK_RANGE[0] and m[1] + data_dict[m[0]]['SERVICE'] >= LUNCH_BREAK_RANGE[1]: \n",
-    "                raise Exception(\"Inizializzazione fallita: un meet occupa tutta la durata di un pranzo.\")\n",
-    "                \n",
-    "            if freeat + distance_matrix[agents_paths[i][-1]][m[0]]*TIME_PER_DISTANCE <= m[1]:\n",
-    "                freeat = m[1] + data_dict[m[0]]['SERVICE']\n",
-    "                agents_paths[i].append(m[0])\n",
-    "                to_remove.append(m)\n",
-    "                if m[1] >= LUNCH_BREAK_RANGE[0] + LUNCH_BREAK_TIME and m[1] <= LUNCH_BREAK_RANGE[1] + LUNCH_BREAK_TIME and not lunch_done: #ho già pranzato\n",
-    "                    lunch_done = True #m[1] - travel?\n",
-    "                if freeat >= LUNCH_BREAK_RANGE[0] and freeat <= LUNCH_BREAK_RANGE[1] and not lunch_done: #è ora di pranzo: sposto freeat di mezz'ora\n",
-    "                    freeat = freeat + LUNCH_BREAK_TIME\n",
-    "                    lunch_done = True\n",
-    "        \n",
-    "        for m in to_remove:\n",
-    "            uncovered_meets.remove(m)\n",
-    "\n",
+    "    sched = newsched\n",
+    "    \n",
     "'''Converte una lista di nodi (path) in una schedula. Ogni nodo rappresenta la sequenza dei meet, e se c'è\n",
     "abbastanza tempo si torna in ufficio'''\n",
     "def path_to_schedule(path):\n",
@@ -683,7 +640,7 @@
     "        del(sched[-1])#rimuovo end\n",
     "    return sched\n",
     "\n",
-    "#convert path in schedule (dove ci sono dei buchi con abbastanza tempo per tornare in ufficio ci torno)\n",
+    "'''converte i percorsi degli agenti in schedule (dove ci sono dei buchi con abbastanza tempo per tornare in ufficio ci torno)'''\n",
     "def paths_to_schedule():\n",
     "    #ho una lista di meet in sequenza, devo \"incastrare\" ritorni in ufficio e pranzi\n",
     "    scheds = {a: [] for a in agent_list}\n",
@@ -691,13 +648,82 @@
     "        scheds[i].append(path_to_schedule(agents_paths[i]))\n",
     "    return scheds\n",
     "\n",
+    "''' Verifica l'ammissibilità di una schedula'''\n",
     "def is_sched_feasible(schedule):#scorro la schedula e se c'è un valore < del precedente torno false, altrimenti true\n",
     "    time = 0.0\n",
     "    for work in schedule:\n",
     "        if time > work[1]:\n",
     "            return False\n",
     "        time = work[1]\n",
-    "    return True"
+    "    return True\n",
+    "\n",
+    "'''Genera molte varianti di schedule facendo lo swap dei nodi. Ognuna di queste se è ammissibile fa parte del modello master definito'''\n",
+    "def all_schedule_comb(agents_paths):\n",
+    "    scheds = paths_to_schedule()\n",
+    "    all_combinations = swap(agents_paths)\n",
+    "    for comb in all_combinations: #all_combination is a list of dicts\n",
+    "        for key in comb.keys():\n",
+    "            sched = path_to_schedule(comb[key])\n",
+    "            if is_sched_feasible(sched) and sched not in scheds[key]:\n",
+    "                scheds[key].append(sched) \n",
+    "    return scheds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inizializzazione\n",
+    "\n",
+    "Si inizia con una prima soluzione ammissibile per il problema.\n",
+    "L'algoritmo è greedy, si prende un agente per volta e tra tutti i meeting disponibili cerca\n",
+    "di partecipare a più meeting possibili."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Per ogni agente cerco il percorso migliore per seguire più meeting possibili, considero anche il pranzo\n",
+    "'''\n",
+    "agents_paths = {a:[] for a in agent_list}\n",
+    "uncovered_meets = meets_duedates.copy()\n",
+    "uncovered_meets.sort(key=lambda x: x[1])\n",
+    "for i in range(len(agents_paths)):\n",
+    "    lunch_done = False\n",
+    "    if uncovered_meets:\n",
+    "        next_meet = uncovered_meets.pop(0)\n",
+    "        freeat = next_meet[1] + data_dict[next_meet[0]]['SERVICE']\n",
+    "        if next_meet[1] <= LUNCH_BREAK_RANGE[0] and freeat >= LUNCH_BREAK_RANGE[1]:\n",
+    "            raise Exception(\"Inizializzazione fallita: un meet occupa tutta la durata di un pranzo.\")\n",
+    "            \n",
+    "        agents_paths[i].append(next_meet[0])\n",
+    "        if next_meet[1] >= LUNCH_BREAK_RANGE[0] + LUNCH_BREAK_TIME and next_meet[1] <= LUNCH_BREAK_RANGE[1] + LUNCH_BREAK_TIME: #ho già pranzato\n",
+    "            lunch_done = True\n",
+    "        elif freeat >= LUNCH_BREAK_RANGE[0] and freeat <= LUNCH_BREAK_RANGE[1]: #è ora di pranzo: sposto freeat di mezz'ora\n",
+    "            freeat = freeat + LUNCH_BREAK_TIME\n",
+    "            lunch_done = True\n",
+    "        \n",
+    "        to_remove = []\n",
+    "        for m in uncovered_meets:\n",
+    "            if m[1] <= LUNCH_BREAK_RANGE[0] and m[1] + data_dict[m[0]]['SERVICE'] >= LUNCH_BREAK_RANGE[1]: \n",
+    "                raise Exception(\"Inizializzazione fallita: un meet occupa tutta la durata di un pranzo.\")\n",
+    "                \n",
+    "            if freeat + distance_matrix[agents_paths[i][-1]][m[0]]*TIME_PER_DISTANCE <= m[1]:\n",
+    "                freeat = m[1] + data_dict[m[0]]['SERVICE']\n",
+    "                agents_paths[i].append(m[0])\n",
+    "                to_remove.append(m)\n",
+    "                if m[1] >= LUNCH_BREAK_RANGE[0] + LUNCH_BREAK_TIME and m[1] <= LUNCH_BREAK_RANGE[1] + LUNCH_BREAK_TIME and not lunch_done: #ho già pranzato\n",
+    "                    lunch_done = True #m[1] - travel?\n",
+    "                if freeat >= LUNCH_BREAK_RANGE[0] and freeat <= LUNCH_BREAK_RANGE[1] and not lunch_done: #è ora di pranzo: sposto freeat di mezz'ora\n",
+    "                    freeat = freeat + LUNCH_BREAK_TIME\n",
+    "                    lunch_done = True\n",
+    "        \n",
+    "        for m in to_remove:\n",
+    "            uncovered_meets.remove(m)"
    ]
   },
   {
@@ -716,7 +742,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial cost: 35606.0\n",
+      "Costo iniziale: 35606.0\n",
       "Using license file C:\\Users\\gabriele\\gurobi.lic\n",
       "Academic license - for non-commercial use only\n",
       "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
@@ -740,7 +766,10 @@
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 3.315500000000e+04, best bound 3.315500000000e+04, gap 0.0000%\n",
-      "35606.0 33155.0\n",
+      "\n",
+      "-----------------\n",
+      "Costo precedente: 35606.0, costo attuale: 33155.0\n",
+      "\n",
       "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
       "Optimize a model with 20 rows, 41 columns and 122 nonzeros\n",
       "Model fingerprint: 0x4a17b2c2\n",
@@ -762,7 +791,10 @@
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 3.243500000000e+04, best bound 3.243500000000e+04, gap 0.0000%\n",
-      "33155.0 32435.0\n",
+      "\n",
+      "-----------------\n",
+      "Costo precedente: 33155.0, costo attuale: 32435.0\n",
+      "\n",
       "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
       "Optimize a model with 20 rows, 41 columns and 122 nonzeros\n",
       "Model fingerprint: 0x4415c595\n",
@@ -777,14 +809,17 @@
       "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 32435 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 3.243500000000e+04, best bound 3.243500000000e+04, gap 0.0000%\n",
-      "32435.0 32435.0\n"
+      "\n",
+      "-----------------\n",
+      "Costo precedente: 32435.0, costo attuale: 32435.0\n",
+      "\n"
      ]
     }
    ],
@@ -798,7 +833,7 @@
     "        optimize_time_windows(s)\n",
     "for key in scheds.keys():\n",
     "    last_cost = last_cost + path_cost(scheds[key][0])\n",
-    "print(\"Initial cost: \" + str(last_cost))\n",
+    "print(\"Costo iniziale: \" + str(last_cost))\n",
     "while (True):\n",
     "    scheds = all_schedule_comb(agents_paths)\n",
     "    for key in scheds.keys():\n",
@@ -812,7 +847,7 @@
     "    cost = 0\n",
     "    for key in scheds.keys():\n",
     "        cost = cost + path_cost(scheds[key])\n",
-    "    print(last_cost, cost)\n",
+    "    print(\"\\n-----------------\\nCosto precedente: \" + str(last_cost) + \", costo attuale: \" + str(cost)+\"\\n\")\n",
     "    if (last_cost <= cost):\n",
     "        break\n",
     "    else:\n",
@@ -836,8 +871,8 @@
       "0        8            0.0      3600.0        2400.0        6000.0         False       3600.0\n",
       "1        2          208.0      8400.0        2400.0       10800.0         False       2192.0\n",
       "2        9          630.0     13000.0        2400.0       15400.0         False       1570.0\n",
-      "3   OFFICE          845.0     18045.0        3600.0        3600.0          True       1570.0\n",
-      "4        1            0.0     24800.0        2400.0       27200.0         False       1570.0\n",
+      "3   OFFICE          845.0     18045.0        3600.0        3600.0          True          0.0\n",
+      "4        1            0.0     24800.0        2400.0       27200.0         False          0.0\n",
       "\n",
       "Agent 2\n",
       "   POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
@@ -851,8 +886,8 @@
       "0   OFFICE            0.0         0.0        3600.0        3600.0         False          0.0\n",
       "1        6            0.0      7100.0        2400.0        9500.0         False          0.0\n",
       "2        3          573.0     10600.0        2400.0       13000.0         False        527.0\n",
-      "3   OFFICE          918.0     13918.0        3600.0        3600.0         False        527.0\n",
-      "4   OFFICE            0.0     16200.0        3600.0        3600.0          True        527.0\n",
+      "3   OFFICE          918.0     13918.0        3600.0        3600.0         False          0.0\n",
+      "4   OFFICE            0.0     16200.0        3600.0        3600.0          True          0.0\n",
       "\n",
       "Agent 4\n",
       "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE\n",
@@ -916,6 +951,7 @@
     "                       }\n",
     "            last_meet_or_office = s[2]\n",
     "            lunch = False\n",
+    "            wait = 0.0\n",
     "            agent_trip_desc.append(pos_desc)\n",
     "            \n",
     "        if s[0] == 'lunch':\n",
@@ -947,6 +983,13 @@
    "source": [
     "print(scheds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
