--- a/ESAME_HEURISTIC.ipynb
+++ b/ESAME_HEURISTIC.ipynb
@@ -240,11 +240,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definiamo una funzione che dato un percorso, definito come lista, ne restituisce il costo.\n",
-    "Un percorso è una successione di azioni tra {'office','meet','wait','travel', 'lunch'} ai quali\n",
-    "sono associati un tempo di inizio e una posizione.\n",
+    "# Path cost\n",
     "\n",
-    "Il costo del percorso è calcolato dai tempi di wait e di travel, che si punta a minimizzare."
+    "We define a function that, given a path defined as a list of actions, gets the cost of the path.\n",
+    "Action are the following: {'office','meet','wait','travel', 'lunch'} and at each one is assigned\n",
+    "a start time and a position.\n",
+    "\n",
+    "The cost is computed on waits and travel action, that must be minimized."
    ]
   },
   {
@@ -796,10 +798,10 @@
       "  RHS range        [1e+00, 1e+00]\n",
       "Found heuristic solution: objective 34886.000000\n",
       "Presolve removed 20 rows and 41 columns\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.01s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.03 seconds\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 33155 \n",
