--- a/ESAME_HEURISTIC.ipynb
+++ b/ESAME_HEURISTIC.ipynb
@@ -240,11 +240,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definiamo una funzione che dato un percorso, definito come lista, ne restituisce il costo.\n",
-    "Un percorso è una successione di azioni tra {'office','meet','wait','travel', 'lunch'} ai quali\n",
-    "sono associati un tempo di inizio e una posizione.\n",
+    "# Path cost\n",
     "\n",
-    "Il costo del percorso è calcolato dai tempi di wait e di travel, che si punta a minimizzare."
+    "We define a function that, given a path defined as a list of actions, gets the cost of the path.\n",
+    "Action are the following: {'office','meet','wait','travel', 'lunch'} and at each one is assigned\n",
+    "a start time and a position.\n",
+    "\n",
+    "The cost is computed on waits and travel action, that must be minimized."
    ]
   },
   {
