Update heuristic with time exec

--- a/ESAME_HEURISTIC.ipynb
+++ b/ESAME_HEURISTIC.ipynb
@@ -723,6 +723,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
+    "exec_start_time = datetime.datetime.now()\n",
+    "\n",
     "'''\n",
     "Greedy init: each agent takes all the meets he can do.\n",
     "'''\n",
@@ -816,7 +819,7 @@
       "  Clique: 1\n",
       "  Zero half: 5\n",
       "\n",
-      "Explored 1 nodes (84 simplex iterations) in 0.05 seconds\n",
+      "Explored 1 nodes (84 simplex iterations) in 0.07 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 3: 57370 57396 60873 \n",
@@ -896,7 +899,7 @@
       "  Gomory: 2\n",
       "  Zero half: 1\n",
       "\n",
-      "Explored 1 nodes (49 simplex iterations) in 0.05 seconds\n",
+      "Explored 1 nodes (49 simplex iterations) in 0.06 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 3: 51730 52458 54409 \n",
@@ -917,7 +920,7 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 11 rows and 93 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.00s\n",
       "Presolved: 22 rows, 62 columns, 228 nonzeros\n",
       "Variable types: 0 continuous, 62 integer (62 binary)\n",
       "\n",
@@ -949,7 +952,7 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
       "Presolve removed 11 rows and 93 columns\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.01s\n",
       "Presolved: 22 rows, 62 columns, 228 nonzeros\n",
       "Variable types: 0 continuous, 62 integer (62 binary)\n",
       "\n",
@@ -960,7 +963,7 @@
       "\n",
       "*    0     0               0    48574.000000 48574.0000  0.00%     -    0s\n",
       "\n",
-      "Explored 0 nodes (19 simplex iterations) in 0.02 seconds\n",
+      "Explored 0 nodes (19 simplex iterations) in 0.03 seconds\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 48574 \n",
@@ -970,7 +973,8 @@
       "\n",
       "-----------------\n",
       "Prev cost: 48574.0, cost: 48574.0\n",
-      "\n"
+      "\n",
+      "1.173323\n"
      ]
     }
    ],
@@ -1002,7 +1006,13 @@
     "    if (last_cost <= cost):\n",
     "        break\n",
     "    else:\n",
-    "        last_cost = cost"
+    "        last_cost = cost\n",
+    "\n",
+    "#get execution time\n",
+    "exec_end_time = datetime.datetime.now()\n",
+    "delta_exec_time = exec_end_time - exec_start_time\n",
+    "exec_time = delta_exec_time.total_seconds()\n",
+    "print(exec_time)"
    ]
   },
   {
@@ -1141,15 +1151,8 @@
    "source": [
     "# Dump result dict on file\n",
     "with open(f\"./TEST_SETS/{FILE.split('/')[-1].split('.')[0]}_solution_heuristic\", \"wb\") as file:\n",
-    "    pickle.dump({\"stats\": stats, \"domino\": domino_list, \"positions\": positions}, file)"
+    "    pickle.dump({\"stats\": stats, \"domino\": domino_list, \"positions\": positions, \"time\": exec_time}, file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
